--- a/order-command-ms/order-command-ms-app/.gitignore
+++ b/order-command-ms/order-command-ms-app/.gitignore
@@ -26,3 +26,20 @@
 
 ### VS Code ###
 .vscode/
+
+
+### From Original ###
+/target
+/.m2
+
+es-cert.der
+
+/caches
+/local.properties
+.*.swp
+.DS_Store
+/src/main/liberty/config/server.env
+/mc-target
+/.apt_generated/
+/.apt_generated_tests/
+/.factorypath
