--- a/order-command-ms/order-command-ms-app/pom.xml
+++ b/order-command-ms/order-command-ms-app/pom.xml
@@ -56,10 +56,16 @@
         </dependency>
 
         <!-- For tests -->
-        <dependency>
+        <!-- <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency> -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
