changed service name in service.yaml

--- a/order-query-ms/chart/orderqueryms/templates/service.yaml
+++ b/order-query-ms/chart/orderqueryms/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{  .Chart.Name }}-service"
+  name: "order-query-ms"
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
