--- a/order-command-ms/chart/ordercommandms/templates/service.yaml
+++ b/order-command-ms/chart/ordercommandms/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{  .Chart.Name }}-service"
+  name: "order-command-ms"
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
