--- a/order-query-ms/pom.xml
+++ b/order-query-ms/pom.xml
@@ -198,6 +198,63 @@
           <packagingExcludes>pom.xml</packagingExcludes>
         </configuration>
       </plugin>
+
+       <!-- Configure javametrics monitoring -->
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>copy-javametrics-dash</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <stripVersion>true</stripVersion>
+              <outputDirectory>${project.build.directory}/liberty/wlp/usr/servers/defaultServer/dropins</outputDirectory>
+              <includeArtifactIds>javametrics-dash</includeArtifactIds>
+            </configuration>
+          </execution>
+          <execution>
+            <id>copy-javametrics-rest</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <stripVersion>true</stripVersion>
+              <outputDirectory>${project.build.directory}/liberty/wlp/usr/servers/defaultServer/dropins</outputDirectory>
+              <includeArtifactIds>javametrics-rest</includeArtifactIds>
+            </configuration>
+          </execution>
+          <execution>
+            <id>copy-javametrics-agent</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <stripVersion>true</stripVersion>
+              <outputDirectory>${project.build.directory}/liberty/wlp/usr/servers/defaultServer/resources/</outputDirectory>
+              <includeArtifactIds>javametrics-agent</includeArtifactIds>
+            </configuration>
+          </execution>
+          <execution>
+            <id>copy-javametrics-asm</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/liberty/wlp/usr/servers/defaultServer/resources/asm</outputDirectory>
+              <includeGroupIds>org.ow2.asm</includeGroupIds>
+              <includeArtifactIds>asm,asm-commons</includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <!-- Enable liberty-maven plugin -->
       <plugin>
         <groupId>io.openliberty.tools</groupId>
