Add optoinal KAFKA_APIKEY

--- a/order-command-ms/app-deploy.yaml
+++ b/order-command-ms/app-deploy.yaml
@@ -69,6 +69,12 @@ spec:
       configMapKeyRef:
         key: brokers
         name: kafka-brokers
+  - name: KAFKA_APIKEY
+    valueFrom:
+      secretKeyRef:
+        key: binding
+        name: eventstreams-apikey
+        optional: true
   - name: ORDER_TOPIC
     valueFrom:
       configMapKeyRef:
