--- a/order-query-ms/app-deploy.yaml
+++ b/order-query-ms/app-deploy.yaml
@@ -70,6 +70,12 @@ spec:
       configMapKeyRef:
         key: brokers
         name: kafka-brokers
+  - name: KAFKA_APIKEY
+    valueFrom:
+      secretKeyRef:
+        key: binding
+        name: eventstreams-apikey
+        optional: true      
   - name: ORDER_TOPIC
     valueFrom:
       configMapKeyRef:
